--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -12,5 +12,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/brand_name"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textStyle="bold"
+        android:textColor="#FF9800"/>
 </RelativeLayout>
